@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.digital</groupId>
-    <artifactId>Winter2022TAF</artifactId>
+    <artifactId>TalentLMSWinter2022</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
@@ -13,8 +13,20 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <allureTestng.version>2.21.0</allureTestng.version>
         <aspectj.version>1.9.19</aspectj.version>
+        <maven-surefire-plugin.version>2.20.1</maven-surefire-plugin.version>
+        <allure-testng.version>2.6.0</allure-testng.version>
+        <resultsPatternAllure>**/allure-results</resultsPatternAllure>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <selenium.version>4.1.3</selenium.version>
+        <mvn.source.version>17</mvn.source.version>
+        <mvn.target.version>17</mvn.target.version>
+        <testng.version>7.5</testng.version>
+        <aspectj.version>1.9.19</aspectj.version>
+        <webdrivermanager.version>5.1.0</webdrivermanager.version>
+        <maven-surefire-plugin-version>3.0.0-M5</maven-surefire-plugin-version>
+        <allure.version>2.17.3</allure.version>
+        <allure.testng.version>2.17.3</allure.testng.version>
     </properties>
 
     <dependencies>
@@ -59,36 +71,51 @@
         <dependency>
             <groupId>io.qameta.allure</groupId>
             <artifactId>allure-testng</artifactId>
-            <!--1-->
-            <version>${allureTestng.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.testng</groupId>
-                    <artifactId>testng</artifactId>
-                </exclusion>
-            </exclusions>
+            <version>2.21.0</version>
+            <scope>test</scope>
         </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-commandline -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-commandline</artifactId>
+            <version>2.21.0</version>
+            <type>pom</type>
+        </dependency>
+
 
         <dependency>
             <groupId>org.aspectj</groupId>
             <artifactId>aspectjweaver</artifactId>
             <!--5-->
-            <version>${aspectj.version}</version>
+            <version>1.9.19</version>
             <scope>runtime</scope>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/com.mailosaur/mailosaur-java -->
+
         <dependency>
             <groupId>com.mailosaur</groupId>
             <artifactId>mailosaur-java</artifactId>
             <version>7.12.0</version>
         </dependency>
 
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-attachments -->
         <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.17.0</version>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-attachments</artifactId>
+            <version>2.21.0</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>2.21.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
@@ -103,15 +130,69 @@
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>${mvn.source.version}</source>
+                    <target>${mvn.target.version}</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M5</version>
                 <configuration>
+
+                    <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
+                    <failIfNoTests>false</failIfNoTests>
+                    <encoding>UTF-8</encoding>
+                    <!--                    <reuseForks>true</reuseForks>-->
+                    <!--                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>-->
                     <suiteXmlFiles>
                         <suiteXmlFile>testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+
+                    <testFailureIgnore>true</testFailureIgnore>
+
+                    <!-- java heap size = Xms2048m = 2GB -->
+                    <!-- JVM Option to set command line -->
+                    <!-- javaagent: used to take this jar files as paramater to pass To JVM -->
+                    <argLine>
+                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
+                    </argLine>
+                    <!-- Take output to target -->
+                    <systemPropertyVariables>
+                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
+                    </systemPropertyVariables>
+                </configuration>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.aspectj</groupId>
+                        <artifactId>aspectjweaver</artifactId>
+                        <version>1.9.19</version>
+                    </dependency>
+                </dependencies>
+
+            </plugin>
+
+            <!-- give IntelliJ acceptable to run and open allure report automatic By download allure binary in project
+            download allure binary -->
+            <plugin>
+                <groupId>io.qameta.allure</groupId>
+                <artifactId>allure-maven</artifactId>
+                <version>2.10.0</version>
+                <configuration>
+                    <reportVersion>${allure.version}</reportVersion>
                 </configuration>
             </plugin>
+
+
         </plugins>
     </build>
+
+
+
+
+
 
 </project>
